[tool.poetry]
name = "zte-l13"
version = "0.2.3"
description = ""
authors = ["bugcity <wakamesukusuki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "zte_l13"
testpaths = ["tests",]
